examples/test/testpolicy12459.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12459
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key33: value45
      key36: value11
      key44: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value40
      podSelector:
        matchLabels:
          key28: value21
          key48: value46
          key9: value14
